# meza

./: .gitignore  .pipignore  .travis.yml  CHANGES.rst  CONTRIBUTING.rst  COOKBOOK.rst  INSTALLATION.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  TODO.rst  dev-requirements.txt  examples.py  manage.py  optional-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tabutils.py  tox.ini
.github/workflows/: main.yml
data/real/: Datagov_FY10_EDU_recp_by_State.csv
data/test/: fixed_w_header.txt  iso88591.csv  line.geojson  mt.mdb  polygon.geojson  test.csv  test.geojson  test.htm  test.html  test.sqlite  test.tsv  test.xls  test.xlsx  test.yml  test_bad.csv  vertical_table.html  windows1252.csv
docs/: AUTHORS.rst  CHANGES.rst  COOKBOOK.rst  FAQ.rst  INSTALLATION.rst  TODO.rst
examples/: usage.ipynb  usage.py
helpers/: check-stage  clean-build  clean-pyc  pippy  release  srcdist  test  wheel
meza/: __init__.py  _compat.py  compat.py  convert.py  dbf.py  fntools.py  io.py  process.py  stats.py  typetools.py  unicsv.py
tabutils/: __init__.py  convert.py  dbf.py  fntools.py  io.py  process.py  py2stats.py  stats.py  typetools.py  unicsv.py
testdata/: m.mdb  r.mdb  test.xls
tests/: __init__.py  standard.rc  test_fntools.py  test_io.py  test_main.py  test_process.py
