[metadata]
maintainer = Jason R. Coombs
maintainer_email = jaraco@jaraco.com

[options]
python_requires = >=3.8

[wheel]
universal=1

[unittest]
plugins=doctest
process-restartworker=1

[doctest]
always-on=True

[flake8]
ignore=W191,E126,E128,E122,E731,F403,F401,BLK100
max-complexity=10
max-line-length=88
exclude=./build/*,./dist/*,./.tox/*,./app/lib/.ropeproject/*,./eggs/*

[pylint]
max-line-length=88

[pylint.messages_control]
disable=C0330,C0326
